--- a/melody/index.html
+++ b/melody/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/normalize.css">
+  <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -40,7 +40,7 @@
       </div>
     </div>
   </header>
-  <main class="main">
+  <main class="main">    
     <div class="main-image">
       <svg class="home-image" width="734" height="640" viewBox="0 0 734 640" fill="none"
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -51,23 +51,23 @@
           </pattern>
           <image id="image0" width="740" height="640" xlink:href="img/home.png" />
         </defs>
-        <path d="M222 524L442.8 532L512 518.3V540L443.5 559.7L222 548.7V524Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M223 524V499L443.3 502.3L513 499V519L443.7 532L223 524Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M223 500V475H444H513V498L445 505L223 500Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M223 475V450L444.3 446.3L512 453V475H444" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M223 450V424L444.5 420.7L513 431.7V453L444 446.3L223 450Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 424V400.3L443 388L514 411V432.3L443 420L222 424Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 402V377L444.2 360.7L514 389.3V410L443.7 388.3L222 402Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 377V352L444.5 331.7L514 368.3V389L442 360.3L222 377Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 353V329L445 304.3L514 348.3V370L444.7 332L222 353Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 329V305L444.5 276.3L514 327.3V348L443.7 305.7L222 329Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M221 306V282L443.3 249L514 308.3V328L444 277.3L221 306Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 282V258L443.2 223L513 287V308L444.3 249.7L222 282Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 259V234L444.3 196L513 266.3V287L444 223L222 259Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 236V211L442.8 167.3L513 246.3V269L444 195.7L222 236Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M223 212V187L443 139L513 224V247L442.3 167.7L223 212Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 187V162L441.8 110L513 202.3V225L443.3 138.7L222 187Z" fill="#3595F6" fill-opacity="0.75" />
-        <path d="M222 163V137L444 80.3L513 182V203L443.7 111.3L222 163Z" fill="#3595F6" fill-opacity="0.75" />
+        <path data-floor="02" d="M222 531L442.8 539L512 525.3V547L443.5 566.7L222 555.7V531Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="03" d="M223 530V505L443.3 508.3L513 505V525L443.7 538L223 530Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="04" d="M223 504V479H444H513V502L445 509L223 504Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="05" d="M223 478V453L444.3 449.3L512 456V478H444" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="06" d="M223 452V426L444.5 422.7L513 433.7V455L444 448.3L223 452Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="07" d="M222 425V401.3L443 389L514 412V433.3L443 421L222 425Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="08" d="M222 402V377L444.2 360.7L514 389.3V410L443.7 388.3L222 402Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="09" d="M222 377V352L444.5 331.7L514 368.3V389L442 360.3L222 377Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="10" d="M222 352V328L445 303.3L514 347.3V369L444.7 331L222 352Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="11" d="M222 327V303L444.5 274.3L514 325.3V346L443.7 303.7L222 327Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="12" d="M221 302V278L443.3 245L514 304.3V324L444 273.3L221 302Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="13" d="M222 277V253L443.2 218L513 282V303L444.3 244.7L222 277Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="14" d="M222 253V228L444.3 190L513 260.3V281L444 217L222 253Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="15" d="M222 229V204L442.8 160.3L513 239.3V262L444 188.7L222 229Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="16" d="M223 204V179L443 131L513 216V239L442.3 159.7L223 204Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="17" d="M222 179V154L441.8 102L513 194.3V217L443.3 130.7L222 179Z" fill="#3595F6" fill-opacity="0.65" />
+        <path data-floor="18" d="M222 154V128L444 71.3L513 173V194L443.7 102.3L222 154Z" fill="#3595F6" fill-opacity="0.65" />       
       </svg>
 
     </div>
@@ -87,6 +87,8 @@
     </div>
 
   </main>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
 </body>
-
 </html>
