--- a/travel-agency/index.html
+++ b/travel-agency/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Nomad - Найди свое приключение</title>
+	<title>Nova - Найди свое приключение</title>
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 
 	<meta name="viewport" content="width=device-width">
@@ -81,7 +81,7 @@
 				<a href="#" class="trip">
 					<div class="trip-header">
 						<h3>Снорклинг с дельфинами и черепахой</h3>
-						<p>Расскажем про секретные локации, где можно поснорклить с черепахой и дельфинами. А...</p>
+						<p>Расскажем про секретные локации, где можно поплавать с черепахой и дельфинами...</p>
 					</div>
 
 					<img src="img/@1x/trip-thailand.jpg" alt="">
@@ -93,7 +93,7 @@
 				<a href="#" class="trip">
 					<div class="trip-header">
 						<h3>Дайвинг в пещерах</h3>
-						<p>Любишь экстрим? Дайвинг в пещерах, прыжки с водопадов, рафтинг. А как еще насчет, ...</p>
+						<p>Любишь экстрим? Дайвинг в пещерах, прыжки с водопадов, рафтинг. А как насчет...</p>
 					</div>
 
 					<img src="img/@1x/trip-india.jpg" alt="">
@@ -149,7 +149,7 @@
 					<li><a href="#">Контакты</a></li>
 				</ul>
 			</nav>
-			<div class="copyright">© 2019 NOMAD</div>
+			<div class="copyright">© 2019 NOVA</div>
 		</div>
 	</footer>
 
