--- a/travel-agency/index.html
+++ b/travel-agency/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Nova - Найди свое приключение</title>
+	<title>Travel-Agency</title>
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 
 	<meta name="viewport" content="width=device-width">
@@ -149,7 +149,7 @@
 					<li><a href="#">Контакты</a></li>
 				</ul>
 			</nav>
-			<div class="copyright">© 2019 NOVA</div>
+			<div class="copyright">2021</div>
 		</div>
 	</footer>
 
