--- a/travel-agency/index.html
+++ b/travel-agency/index.html
@@ -86,7 +86,7 @@
 
 					<img src="img/@1x/trip-thailand.jpg" alt="">
 					<div class="trip-footer">
-						<div class="country"><i class="fas fa-globe-americas"></i> Thailand</div>
+						<div class="country"><i class="fas fa-globe-americas"></i>таиланд</div>
 						<div class="time"><i class="far fa-clock"></i> 1 неделя</div>
 					</div>
 				</a>
