--- a/travel-agency/index.html
+++ b/travel-agency/index.html
@@ -8,7 +8,7 @@
 	<title>Travel-Agency</title>
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 	<link rel="icon" href="img/favicon.png">
 
