--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=travel-agency/index.html" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=travel-agency/index.html">
-  
-</head>
-
-<body>
-
-</body>
-
+  <body></body>
 </html>
- 
